Uppgift: Varianter av ett webbtypsnitt (VG)

--- a/index.css
+++ b/index.css
@@ -1,4 +1,18 @@
 @font-face {
   font-family: MyFont;
-  src: url('Merriweather-Regular.ttf') format('truetype');
+  src: url('Merriweather-Regular.ttf') format('truetype'),
+  url('webfont.ttf')  format('truetype');
+  font-weight: 300;
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: MyFont;
+  src: url('gestareg-webfont.eot');
+  src: local('☺'), 
+       url('gestareg-webfont.woff') format('woff'), 
+       url('gestareg-webfont.ttf') format('truetype'), 
+       url('gestareg-webfont.svg#webfontg8dbVmxj') format('svg');
+       font-weight: 300;
+       font-weight: 400;
 }
