--- a/index.css
+++ b/index.css
@@ -1,5 +1,6 @@
 
 /* 3x2 column  */
+
 body {
   display: grid;
   gap: 10px;
@@ -21,3 +22,24 @@ body {
 }
 
 
+/* grid 4x3 */
+
+body {
+  display: grid;
+  gap: 10px;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+
+#first {
+  grid-column: 1/4;
+  grid-row: 1/3;
+}
+#second {
+  grid-column: 4/4;
+  grid-row: 1/4;
+}
+#third {
+  grid-column: 1/4;
+  grid-row: 3/4;
+}
