--- a/index.css
+++ b/index.css
@@ -1,45 +1,18 @@
-
-/* 3x2 column  */
-
 body {
   display: grid;
   gap: 10px;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 2fr 1fr 1fr;
+  grid-template-rows: 2fr 1fr;
 }
 
 #first {
   grid-column: 1/3;
-  grid-row: 1/2;
 }
 #second {
-  grid-column: 3/3;
+  grid-column: 3;
   grid-row: 1/3;
 }
 #third {
   grid-column: 1/3;
   grid-row: 2/3;
-}
-
-
-/* grid 4x3 */
-
-body {
-  display: grid;
-  gap: 10px;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
-}
-
-#first {
-  grid-column: 1/4;
-  grid-row: 1/3;
-}
-#second {
-  grid-column: 4/4;
-  grid-row: 1/4;
-}
-#third {
-  grid-column: 1/4;
-  grid-row: 3/4;
 }
