--- a/index.css
+++ b/index.css
@@ -1,18 +1,13 @@
 body {
   display: grid;
   gap: 10px;
+  grid-template-areas: 
+  "first first second"
+  "third third second";
   grid-template-columns: 2fr 1fr 1fr;
   grid-template-rows: 2fr 1fr;
 }
 
-#first {
-  grid-column: 1/3;
-}
-#second {
-  grid-column: 3;
-  grid-row: 1/3;
-}
-#third {
-  grid-column: 1/3;
-  grid-row: 2/3;
-}
+#first {grid-area: first;}
+#second {grid-area: second;}
+#third {grid-area: third;}
