--- a/code-along/stylesheet.css
+++ b/code-along/stylesheet.css
@@ -6,7 +6,7 @@
 2. Body, html settings
 3. Buttons
 4. Navbar
-5.
+5. Hero Section
 6.
 7.
 */
@@ -232,3 +232,35 @@ body, html{
 }
 
 
+/* 5. Hero Section */
+
+.hero-image {
+    background-image: 
+    linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url('/code-along/img/hus1.jpg');
+    height: 90vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+/* linear-gradient(red, orange, yellow, green, blue, 0.5); */
+
+.hero-text {
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: var(--white);
+}
+
+.hero-text h1 {
+    font-size: 4rem;
+    font-weight: 800;
+}
+
+.hero-image .btn {
+    margin-top: 5vw;
+}
