--- a/code-along/stylesheet.css
+++ b/code-along/stylesheet.css
@@ -6,7 +6,7 @@
 2. Body, html settings
 3. Buttons
 4. Navbar
-5. Hero Section
+5. Hero Section (Hero image)
 6.
 7.
 */
@@ -139,7 +139,7 @@ body, html{
 /*Clarify that the backround on the links is in the same color as the navbar itself*/
 .navbar-links{
     height:100%;
-    background-color:var(four);
+    background-color: var(--four);
 }
 
 /*Adjusting the link settings*/
@@ -147,7 +147,8 @@ body, html{
 .navbar-links ul{
     display:flex;
     padding:0; 
-    margin-top: 3vh;
+    margin-top: 1vh;
+   
 }
 
 .navbar-links li{
@@ -196,6 +197,7 @@ body, html{
     .navbar{
         flex-direction: column;
         align-items: flex-start;
+        
     }
 
     .toggle-button{
@@ -205,6 +207,7 @@ body, html{
     .navbar-links{
         display: none;
         width: 100%;
+        height:20vh;
     }
 
     .navbar-links ul{
@@ -223,6 +226,7 @@ body, html{
     .navbar-links.active{
         display: flex;
         background-color: var(--four);
+      
     }
 
     .brand-title{
@@ -230,37 +234,47 @@ body, html{
     }
 
 }
+/*Validated Ok*/
 
+/*5. Hero Section*/
 
-/* 5. Hero Section */
-
-.hero-image {
-    background-image: 
-    linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url('/code-along/img/hus1.jpg');
-    height: 90vh;
+.hero-image{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/code-along/img/hus1.jpg);
+    height:120vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    position: relative;
+    position: relative;    
 }
 
-/* linear-gradient(red, orange, yellow, green, blue, 0.5); */
-
-.hero-text {
+.hero-text{
     text-align: center;
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top:50%;
+    left:50%;
     transform: translate(-50%, -50%);
     color: var(--white);
 }
 
-.hero-text h1 {
+.hero-text h1{
     font-size: 4rem;
-    font-weight: 800;
+    font-weight:800
 }
 
-.hero-image .btn {
+.hero-image .btn{
     margin-top: 5vw;
 }
+
+/*Adjusting image height to fit all screens on all devices, top to down*/
+@media only screen and (max-width:550px){
+    .hero-image{
+        height: 140vh;
+    }
+}
+
+/*Validated Ok*/
+
+
+
+
+
