--- a/code-along/stylesheet.css
+++ b/code-along/stylesheet.css
@@ -315,6 +315,10 @@ body, html{
     color: var(--white);
 }
 
+#comment2 h2 {
+    margin-top: 2vh;
+}
+
 #comment3 {
     /* always declare what grid-area for #item */
     grid-area: comment3;
@@ -337,3 +341,30 @@ body, html{
 }
 
 
+/* Making grid responsive */
+@media screen and (max-width: 550px) {
+     .testimonial-grid-container {
+        grid-template-columns: 1fr;
+        grid-template-rows: 4fr;
+        row-gap: 5vh;
+
+        grid-template-areas: 
+        "comment1"
+        "comment2"
+        "comment3"
+        "comment4";
+     }
+
+     #comment1 {
+        height: 60vh;
+     }
+     #comment2 {
+        height: 60vh;
+     }
+     #comment3 {
+        height: 60vh;
+     }
+     #comment4 {
+        height: 60vh;
+     }
+}
